welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:41: error: type mismatch;
 found   : Unit
 required: Boolean
    if(dir==Direction.EST)
    ^